# calha_norte_md

./: a_executar.csv  a_executar.parquet  agregado_detalhado_por_convenio_ano.csv  agregado_detalhado_por_convenio_ano.parquet  classificacao_municipios_SDR.parquet  convert_csv_to_parquet.py  dashboard.py  index.html  pyproject.toml
assets/: municipios_br_simpl.geojson
