[project]
name = "painel-sdr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "branca>=0.8.2",
    "duckdb>=1.5.2",
    "folium>=0.20.0",
    "jinja2>=3.1.6",
    "mapclassify>=2.10.0",
    "marimo>=0.23.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
]
